--- a/index.html
+++ b/index.html
@@ -388,10 +388,10 @@
             </li>
           </ul>
         </div>
-        <form action="" class="mail-form">
+        <form class="mail-form">
           <b class="mail-title">Підпишіться на розсилку</b>
           <div class="mail-block">
-            <label for="">
+            <label>
               <input
                 type="email"
                 name="email"
@@ -418,7 +418,7 @@
           </svg>
         </button>
         <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
-        <form action="" class="modal-form">
+        <form class="modal-form">
           <div class="form-element">
             <label for="name">Ім'я</label>
             <div class="input-wrap">
@@ -463,14 +463,11 @@
               class="visually-hidden"
             />
             <label for="agree"
-              ><div class="checkbox">
-                <svg width="12">
-                  <use href="./images/icons.svg#icon-Vector"></use>
-                </svg>
-              </div>
-              Погоджуюся з розсилкою та приймаю
-              <a href="">Умови договору</a></label
-            >
+              ><svg class="checkbox" width="12">
+                <use href="./images/icons.svg#icon-Vector"></use>
+              </svg>
+              Погоджуюся з розсилкою та приймаю<a href=""> Умови договору</a>
+              </label>
           </div>
           <button type="submit" class="btn">Відправити</button>
         </form>
