--- a/portfolio.html
+++ b/portfolio.html
@@ -363,10 +363,10 @@
             </li>
           </ul>
         </div>
-        <form action="" class="mail-form">
+        <form class="mail-form">
           <b class="mail-title">Підпишіться на розсилку</b>
           <div class="mail-block">
-            <label for="">
+            <label>
               <input
                 type="email"
                 name="email"
