--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
               ><svg class="checkbox" width="12">
                 <use href="./images/icons.svg#icon-Vector"></use>
               </svg>
-              Погоджуюся з розсилкою та приймаю<a href=""> Умови договору</a>
+              Погоджуюся з розсилкою та приймаю &nbsp;<a href="">Умови договору</a>
               </label>
           </div>
           <button type="submit" class="btn">Відправити</button>
